tests/parsing/invalid/irq_invalid_out_trigger/bus.fbd
Main bus
	i irq
		out-trigger = "abc"
